@@ -153,7 +153,10 @@ QDragObject* K3bPlayListView::dragObject()
 
 
 K3bAudioPlayer::K3bAudioPlayer( QWidget* parent, const char* name )
-  : QWidget( parent, name ), m_playObject( Arts::PlayObject::null() )
+  : QWidget( parent, name )
+#ifdef HAVE_ARTS_KMEDIA2_H
+, m_playObject( Arts::PlayObject::null() )
+#endif
 {
   // initialize
   // ------------------------------------------------------------------------
@@ -262,12 +265,15 @@ K3bAudioPlayer::~K3bAudioPlayer()
 {
   // we remove the reference to the play object
   // if we don't do this it won't be removed and K3b will crash (not sure why)
+#ifdef HAVE_ARTS_KMEDIA2_H
   m_playObject = Arts::PlayObject::null();
+#endif
 }
 
 
 int K3bAudioPlayer::state()
 {
+#ifdef HAVE_ARTS_KMEDIA2_H
   if( !m_playObject.isNull() ) {
     switch( m_playObject.state() ) {
     case Arts::posIdle:
@@ -280,6 +286,7 @@ int K3bAudioPlayer::state()
   }
   else if( m_currentItem )
     return STOPPED;
+#endif
 
   return EMPTY;
 }
@@ -325,6 +332,7 @@ void K3bAudioPlayer::enqueueFiles( const QStringList& files )
 
 void K3bAudioPlayer::play()
 {
+#ifdef HAVE_ARTS_KMEDIA2_H
   if( !m_currentItem ) {
     setCurrentItem( m_viewPlayList->firstChild() );
   }
@@ -359,6 +367,7 @@ void K3bAudioPlayer::play()
 
     slotUpdateFilename();
   }
+#endif
 }
 
 
@@ -371,6 +380,7 @@ void K3bAudioPlayer::slotPlayItem( QListViewItem* item )
 
 void K3bAudioPlayer::stop()
 {
+#ifdef HAVE_ARTS_KMEDIA2_H
   if( !m_playObject.isNull() ) {
     m_updateTimer->stop();
     m_playObject.halt();
@@ -381,11 +391,13 @@ void K3bAudioPlayer::stop()
     m_seekSlider->setValue(0);
     emit stopped();
   }
+#endif
 }
 
 
 void K3bAudioPlayer::pause()
 {
+#ifdef HAVE_ARTS_KMEDIA2_H
   if( !m_playObject.isNull() ) {
     if( m_playObject.state() == Arts::posPlaying ) {
       m_updateTimer->stop();
@@ -395,11 +407,13 @@ void K3bAudioPlayer::pause()
 
     slotUpdateFilename();
   }
+#endif
 }
 
 
 void K3bAudioPlayer::seek( long pos )
 {
+#ifdef HAVE_ARTS_KMEDIA2_H
   if( !m_playObject.isNull() ) {
     if( m_playObject.state() != Arts::posIdle ) {
       if( pos < 0 ) {
@@ -417,6 +431,7 @@ void K3bAudioPlayer::seek( long pos )
     m_seekSlider->setValue(0);
     slotUpdateCurrentTime(0);
   }
+#endif
 }
 
 
@@ -470,18 +485,22 @@ void K3bAudioPlayer::clear()
 
 long K3bAudioPlayer::length()
 {
+#ifdef HAVE_ARTS_KMEDIA2_H
   if( !m_playObject.isNull() ) {
     return m_playObject.overallTime().seconds;
   }
+#endif
   return 0;
 }
 
 
 long K3bAudioPlayer::position()
 {
+#ifdef HAVE_ARTS_KMEDIA2_H
   if( !m_playObject.isNull() ) {
     return m_playObject.currentTime().seconds;
   }
+#endif
   return 0;
 }
 
@@ -498,6 +517,7 @@ bool K3bAudioPlayer::supportsMimetype( const QString& mimetype )
 
 void K3bAudioPlayer::slotCheckEnd()
 {
+#ifdef HAVE_ARTS_KMEDIA2_H
   if( !m_playObject.isNull() ) {
     if( m_playObject.state() == Arts::posIdle ) {
       if( m_currentItem->nextSibling() ) {
@@ -511,6 +531,7 @@ void K3bAudioPlayer::slotCheckEnd()
       emit ended();
     }
   }
+#endif
 }
 
 
