@@ -264,9 +264,8 @@ void K3bSetup::doApplyDevicePermissions( uint groupId )
 void K3bSetup::doApplyExternalProgramPermissions( uint groupId )
 {
   static const char* programs[] = { "cdrecord",
-				    "cdrdao",
-				    "mkisofs" };  // mkisofs needs to read multisession info
-  static const int NUM_PROGRAMS = 3;
+				    "cdrdao" };
+  static const int NUM_PROGRAMS = 2;
 
   for( int i = 0; i < NUM_PROGRAMS; ++i ) {
     const K3bExternalProgram* p = m_externalBinManager->program( programs[i] );
