@@ -21,8 +21,12 @@ Pluggable audio encoding and completely rewritten audio ripping
 	much faster now due to a much better threading
 Check for read permission when adding files to a project
 file filter in binimagewritingdialog and isoimagewritingdialog (thanx to DAvid Maciejak)
-Verification of written data (compares md5 sums of all written files.
-
+Verification of written data (compares md5 sums of all written files).
+K3bSetup is not longer compiled unless explicit activated (K3bSetup is outdated and K3bSetup2 is still not ready)
+K3b now also compiles without aRts. In this case the audioplayer will be useless (but still there)
+no need for special mkisofs permissons anymore. K3b now openes the device itself when importing
+	an old session.
+	
 0.9
 support for eMovix 0.8.0rc2
 better data project size calculation
